[package]
name = "safetywechat"
version = "0.1.0"
authors = ["tiannian <dtiannian@aliyun.com>"]
edition = "2018"
description = "A Wechat Public Platfrom SDK for Rust. [Inprocessing]"
license-file = "LICENSE"
repository = "https://github.com/tiannian/safetywechat/"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
reqwest = { version = "0.10", features = ["json"] }
async-trait = "0.1.24"
chrono = "0.4.10"
rand = "0.7.3"
hex = "0.4.1"
sha1 = { version = "0.6.0", features = ["std"] }
serde_json = "1.0"
tokio = { version = "0.2", features = ["full"] }
quick-xml = { version = "0.17.2", features = ["serialize"] }
bytes = "0.5.4"
base64 = "0.11.0"
block-modes = "0.3.3"
aes-soft = "0.3.3"

[dev-dependencies]
warp = "0.2"

